// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Тестирование компонента Button отрисовка заблокированной кнопки 1`] = `
<button
  className="text text_type_button text_color_primary button buttonDisableFieldsetError"
  disabled={true}
  type="button"
>
  <p
    className="text"
  >
    текст
  </p>
</button>
`;

exports[`Тестирование компонента Button отрисовка кнопки без текста 1`] = `
<button
  className="text text_type_button text_color_primary button buttonDisableFieldsetError"
  type="button"
>
  <p
    className="text"
  />
</button>
`;

exports[`Тестирование компонента Button отрисовка кнопки с индикацией загрузки 1`] = `
<button
  className="text text_type_button text_color_primary button loader buttonDisableFieldsetError"
  disabled={true}
  type="button"
>
  <img
    alt="Загрузка."
    className="loader_icon"
    src="loader.svg"
  />
</button>
`;

exports[`Тестирование компонента Button отрисовка кнопки с текстом 1`] = `
<button
  className="text text_type_button text_color_primary button buttonDisableFieldsetError"
  type="button"
>
  <p
    className="text"
  >
    текст
  </p>
</button>
`;
